--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Build app
+        run: npx expo export --platform web
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
